--- a/src/app/events/events.component.html
+++ b/src/app/events/events.component.html
@@ -39,8 +39,8 @@
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let element">
         <button (click)="openEdit(element.id)"><mat-icon>edit</mat-icon></button>
-        <button ><mat-icon>delete</mat-icon></button>
-      <button> <mat-icon>Visibility</mat-icon></button> 
+        <button (click)="onDelete(element.id)" ><mat-icon>delete</mat-icon></button>
+      <button (click)="openDetails(element.id)"> <mat-icon>visibility</mat-icon></button> 
 
       </td>
   </ng-container>
