--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,16 @@
-<p>dashboard works!</p>
+<mat-card>
+    <mat-card-title><mat-icon>group</mat-icon> Members</mat-card-title>
+    <mat-card-content>{{ Nb_Members }}</mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-title><mat-icon>event</mat-icon> Events</mat-card-title>
+    <mat-card-content>{{ Nb_Events }}</mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-title><mat-icon>build</mat-icon> Tools</mat-card-title>
+    <mat-card-content>{{ Nb_Tools }}</mat-card-content>
+  </mat-card>
+  <mat-card>
+    <mat-card-title><mat-icon>article</mat-icon> Articles</mat-card-title>
+    <mat-card-content>{{ Nb_Articles }}</mat-card-content>
+  </mat-card>
