--- a/src/app/modal-event-visibility/modal-event-visibility.component.html
+++ b/src/app/modal-event-visibility/modal-event-visibility.component.html
@@ -3,22 +3,22 @@
     
     <div class="event-detail">
       <mat-label class="label">Title</mat-label>
-      <p class="value">{{ data?.Titre }}</p>
+      <p class="value">{{ data.Titre }}</p>
     </div>
   
     <div class="event-detail">
       <mat-label class="label">Start Date</mat-label>
-      <p class="value">{{ data?.DateDebut | date:'MM/dd/yyyy' }}</p>
+      <p class="value">{{ data.DateDebut | date:'MM/dd/yyyy' }}</p>
     </div>
   
     <div class="event-detail">
       <mat-label class="label">End Date</mat-label>
-      <p class="value">{{ data?.DateFin | date:'MM/dd/yyyy' }}</p>
+      <p class="value">{{ data.DateFin | date:'MM/dd/yyyy' }}</p>
     </div>
   
     <div class="event-detail">
       <mat-label class="label">Location</mat-label>
-      <p class="value">{{ data?.Lieu }}</p>
+      <p class="value">{{ data.Lieu }}</p>
     </div>
   </mat-dialog-content>
   
